--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gruntfile boilerplate generator</title>
-	<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css" />
 	<link rel="stylesheet" href="assets/everything.css" />
 	<script type="text/javascript" src="assets/everything.js"></script>
 	<style>
